implemented funnel api
